tests/test-dirs/upstream-typing-recovery/original-tests/log_or_raise.ml
(* TEST
   flags = " -typing-recovery";
   ocamlc_byte_exit_status = "2";
   setup-ocamlc.byte-build-env;
   compile_only = "true";
   ocamlc.byte;
   check-ocamlc.byte-output;
*)

(* Multiply_bound_variable. *)
let f = function
| Some x, Some x | [], x -> x
